Working blaspp backend.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,19 @@
 enable_testing()
 
-# Build a testing application
 add_executable(checklinalg checklinalg.cc)
-# Link it against the built library
 target_link_libraries(checklinalg PUBLIC linalg)
+add_test(NAME checklinalg COMMAND checklinalg)
 
-add_test(NAME islinalg COMMAND checklinalg)
+add_executable(checkblas checkblas.cc)
+target_link_libraries(checkblas PUBLIC linalg)
+add_test(NAME checkblas COMMAND checkblas)
+
+if(ENABLE_CUDA)
+  add_executable(checkblas_device checkblas_device.cc)
+  target_link_libraries(checkblas_device PUBLIC linalg)
+  add_test(NAME checkblas_device COMMAND checkblas_device)
+
+  add_executable(gemm gemm.cc)
+  target_link_libraries(gemm PUBLIC linalg)
+  add_test(NAME gemm COMMAND gemm)
+endif()
