--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,12 +8,17 @@ add_executable(checkblas checkblas.cc)
 target_link_libraries(checkblas PUBLIC linalg)
 add_test(NAME checkblas COMMAND checkblas)
 
+add_executable(gemm gemm.cc)
+target_link_libraries(gemm PUBLIC linalg)
+add_test(NAME gemm COMMAND gemm 200 500 100)
+
+add_executable(gemmV gemmV.cc)
+target_link_libraries(gemmV PUBLIC linalg)
+add_test(NAME gemmV COMMAND gemmV 200 500 100)
+
 if(ENABLE_CUDA)
   add_executable(checkblas_device checkblas_device.cc)
   target_link_libraries(checkblas_device PUBLIC linalg)
   add_test(NAME checkblas_device COMMAND checkblas_device)
 
-  add_executable(gemm gemm.cc)
-  target_link_libraries(gemm PUBLIC linalg)
-  add_test(NAME gemm COMMAND gemm 200 500 100)
 endif()
