--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,10 @@ add_executable(gemmV gemmV.cc)
 target_link_libraries(gemmV PUBLIC linalg)
 add_test(NAME gemmV COMMAND gemmV 200 500 100)
 
+add_executable(copy copy.cc)
+target_link_libraries(copy PUBLIC linalg)
+add_test(NAME copy COMMAND copy)
+
 if(ENABLE_CUDA)
   add_executable(checkblas_device checkblas_device.cc)
   target_link_libraries(checkblas_device PUBLIC linalg)
