--- a/include/linalg_config.hh.in
+++ b/include/linalg_config.hh.in
@@ -40,11 +40,13 @@ template<typename T>
 struct is_complex_t : public std::false_type {
     using value_type = T;
     static T conj(T x) { return x; }
+    static T real(T x) { return x; }
 };
 template<typename T>
 struct is_complex_t<std::complex<T>> : public std::true_type {
     using value_type = T;
     static std::complex<T> conj(std::complex<T> x) { return std::conj(x); }
+    static T real(std::complex<T> x) { return x.real(); }
 };
 
 #endif
