--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 3.17)
 LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 # set the project name
-project(zcheck VERSION 1.0)
+project(smatrix VERSION 1.0)
 find_package(Linalg 1.0 REQUIRED)
 
-add_executable(check check.cc)
-target_link_libraries(check PRIVATE Linalg::linalg)
+add_executable(smat smat.cc)
+target_link_libraries(smat PRIVATE Linalg::linalg)
 
-set_target_properties(check PROPERTIES
+set_target_properties(smat PROPERTIES
                       INSTALL_RPATH_USE_LINK_PATH YES
                       BUILD_WITH_INSTALL_RPATH YES
                       )
-install(TARGETS check DESTINATION bin)
+install(TARGETS smat DESTINATION bin)
