Updated build configs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,10 @@ add_library(linalg ${LINALG_SOURCES})
 find_package(OpenMP   3.1        REQUIRED)
 find_package(MPI      1.0        REQUIRED)
 find_package(blaspp   2020.10.02 REQUIRED)
-get_target_property(blaspp_interface_compile_definitions blaspp INTERFACE_COMPILE_DEFINITIONS)
-if(NOT DISABLE_CUDA AND "${blaspp_interface_compile_definitions}" MATCHES "BLASPP_WITH_CUBLAS")
+#get_target_property(blaspp_interface_compile_definitions blaspp INTERFACE_COMPILE_DEFINITIONS)
+#message("blasspp interface compile: ${blaspp_interface_compile_definitions}")
+#if(NOT DISABLE_CUDA AND "${blaspp_interface_compile_definitions}" MATCHES "BLASPP_WITH_CUBLAS")
+if(NOT DISABLE_CUDA)
     message(STATUS "Enabling CUDA (detected BLASPP_WITH_CUBLAS).")
     set(ENABLE_CUDA ON)
 else()
